testsuite/tests/parser/should_fail/pfail029.alan
hello() : proc
  foo : int;
{
  foo = 3;
  return 0
}
