testsuite/tests/parser/should_fail/pfail029.stderr
pfail029.alan:6:1: Error: Parse error on input `}'
	Probably missing `;'

